--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <title>SEKL</title>
 </head>
-<body class="page-esh">
+<body class="page">
     
 <!-- НАВИГАЦИЯ -->
     <nav class="navigation">
