--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
 </div>
 
 <!-- SEKL -->
-<section class="About-team" id="AT">
+<section data-aos="fade-up" data-aos-duration="1000" class="About-team" id="AT">
     <h4 data-aos="fade-up" data-aos-duration="1000" class="SEKL">SEKL</h4>
+    <p class="SEKL-paragrah">Наш проект затронет такие области как: </p>
+    <ul class="project-types">
+        <li class="finance">finance</li>
+        <li class="developer">developer</li>
+        <li class="medicine">medicine</li>
+        <li class="project-e-commerse">e-commerse</li>
+        </ul>
 </section>
 
 <!-- ПРОЕКТЫ -->
@@ -72,9 +79,9 @@
     <h6 data-aos="fade-up" data-aos-duration="1000" class="services-head" >Услуги</h6>
 
     <div data-aos="fade-up" data-aos-duration="1000" class="services-types">
-        <div class="services-web"> <h9 class="type-uslug">WEB</h9></div>
-        <div class="services-e-commerce"><h10 class="type-uslug">E-COMMERCE</h10></div>
-        <div class="services-mobile"><h11 class="type-uslug">MOBILE</h11></div>
+        <div data-aos="fade-up" data-aos-duration="1000" class="services-web"> <h9 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">WEB</h9></div>
+        <div data-aos="fade-up" data-aos-duration="1000" class="services-e-commerce"><h10 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">E-COMMERCE</h10></div>
+        <div data-aos="fade-up" data-aos-duration="1000" class="services-mobile"><h11 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">MOBILE</h11></div>
     </div>
 </div>
 
