--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 
 <!-- WEB -->
 <div class="content" id="zagolovok">
-
+    <div class="Forma" id="forma">
+        <section class="close-btn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-x" id="closeBtn" viewBox="0 0 16 16">
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+          </svg>
+        </section>
+    </div>
     <div class="btn--text">
         <p class="development">Разработка web-сайтов для рынка</p>
         <!-- <button class="application">Оставить заявку</button> -->
@@ -44,7 +50,7 @@
         <button class="application">Оставить заявку</button>
         </div> -->
 
-        <h1 data-aos="fade-left" class="WEB">Promo sites, support, polygraphy</h1>
+        <h1 data-aos="fade-left" class="WEB" id="WEB">Promo sites, support, polygraphy</h1>
     </section>
 
     <section data-aos="fade-left" class="mobile">
@@ -65,7 +71,7 @@
         <li class="developer">developer</li>
         <li class="medicine">medicine</li>
         <li class="project-e-commerse">e-commerse</li>
-        </ul>
+    </ul>
 </section>
 
 <!-- ПРОЕКТЫ -->
