--- a/index.html
+++ b/index.html
@@ -28,18 +28,35 @@
 
 <!-- WEB -->
 <div class="content" id="zagolovok">
+
+    <!-- ФОРМА -->
     <div class="Forma" id="forma">
         <section class="close-btn">
         <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-x" id="closeBtn" viewBox="0 0 16 16">
             <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
         </svg>
         </section>
+        <h10 class="send-application">Оставить заявку</h10>
+        
+        <input type="text" placeholder="Ваше имя" class="your-name"></input>
+        <input type="text" placeholder="Телефон" class="your-tel"></input>
+        <input type="text" placeholder="Email" class="your-email"></input>
+        <input type="text" placeholder="Комментарий" class="your-comment"></input>
+
+        <div class="attach-file">
+        <a class="ssilka-attach-file" id="ssilkaAttach">Прикрепить файл</a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-paperclip" id="paperclip" viewBox="0 0 16 16">
+            <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"/>
+        </svg>
+        </div>
+
+        <button class="send-btn">Отправить</button>
     </div>
+
     <div class="btn--text">
         <p class="development">Разработка web-сайтов для рынка</p>
-        <!-- <button class="application">Оставить заявку</button> -->
         <div class="btn-zayavka" id="blockbutton">
-            <a href="#" type="button" class="ssilka" id="buttonzaya">Оставить заявку</a>
+            <button class="ssilka" id="buttonzaya">Оставить заявку</button>
         </div>
     </div>
 
