--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
         <input type="text" placeholder="Ваше имя" class="your-name"></input>
         <input type="text" placeholder="Телефон" class="your-tel"></input>
         <input type="text" placeholder="Email" class="your-email"></input>
-        <input type="text" placeholder="Комментарий" class="your-comment"></input>
+        <input type="text" mame=comment placeholder="Комментарий" class="your-comment"></input>
 
         <div class="attach-file">
         <a class="ssilka-attach-file" id="ssilkaAttach">Прикрепить файл</a>
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-paperclip" id="paperclip" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-paperclip" id="paperclip" viewBox="0 0 16 16">
             <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"/>
         </svg>
         </div>
 
         <button class="send-btn">Отправить</button>
+        <div class="void"></div>
     </div>
 
     <div class="btn--text">
