--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
     <!-- ФОРМА -->
     <div class="Forma" id="forma">
-        <section class="close-btn">
+        <div class="close-btn">
         <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-x" id="closeBtn" viewBox="0 0 16 16">
             <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
         </svg>
-        </section>
+    </div>
         <h10 class="send-application">Оставить заявку</h10>
         
         <input type="text" placeholder="Ваше имя" class="your-name"></input>
@@ -103,9 +103,18 @@
     <h6 data-aos="fade-up" data-aos-duration="1000" class="services-head" >Услуги</h6>
 
     <div data-aos="fade-up" data-aos-duration="1000" class="services-types">
-        <div data-aos="fade-up" data-aos-duration="1000" class="services-web"> <h9 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">WEB</h9></div>
-        <div data-aos="fade-up" data-aos-duration="1000" class="services-e-commerce"><h10 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">E-COMMERCE</h10></div>
-        <div data-aos="fade-up" data-aos-duration="1000" class="services-mobile"><h11 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">MOBILE</h11></div>
+        <div data-aos="fade-up" data-aos-duration="1000" class="services-web"> 
+            <span data-aos="fade-up" data-aos-duration="1000" class="one">01</span>
+            <h9 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">WEB</h9>
+        </div>
+        <div data-aos="fade-up" data-aos-duration="1000" class="services-e-commerce">
+            <span data-aos="fade-up" data-aos-duration="1000" class="two">02</span>
+            <h10 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">E-COMMERCE</h10>
+        </div>
+        <div data-aos="fade-up" data-aos-duration="1000" class="services-mobile">
+            <span data-aos="fade-up" data-aos-duration="1000" class="three">03</span>
+            <h11 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">MOBILE</h11>
+        </div>
     </div>
 </div>
 
