--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div data-aos="fade-up" data-aos-duration="1000" class="services-mobile">
             <span data-aos="fade-up" data-aos-duration="1000" class="three">03</span>
-            <h11 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">MOBILE</h11>
+            <h11 data-aos="fade-up" data-aos-duration="1000" class="type-uslug" id="uslugi-mobile">MOBILE</h11>
         </div>
     </div>
 </div>
