Сделан комментарий формы

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 <!-- НАВИГАЦИЯ -->
     <nav class="navigation">
-        <ul class="nav-list">
+        <ul class="nav-list" id="navList">
             <img src="img/default.svg" alt="" class="logo">
         <li><a href="#AT">О НАС</a></li>
         <li><a href="#Project">ПРОЕКТЫ</a></li>
@@ -41,7 +41,9 @@
         <input type="text" placeholder="Ваше имя" class="your-name"></input>
         <input type="text" placeholder="Телефон" class="your-tel"></input>
         <input type="text" placeholder="Email" class="your-email"></input>
-        <input type="text" mame=comment placeholder="Комментарий" class="your-comment"></input>
+        <div class="comment">
+            <textarea class="text-area-comment" placeholder="Комментарий"></textarea>
+        </div>
 
         <div class="attach-file">
         <a class="ssilka-attach-file" id="ssilkaAttach">Прикрепить файл</a>
