Адаптировал под 1920px

--- a/index.html
+++ b/index.html
@@ -64,12 +64,6 @@
     </div>
 
     <section data-aos="fade-left" class="web-sites">
-
-        <!-- <div class="btn--text">
-        <p class="development">Разработка web-сайтов для рынка</p>
-        <button class="application">Оставить заявку</button>
-        </div> -->
-
         <h1 data-aos="fade-left" class="WEB" id="WEB">Promo sites, support, polygraphy</h1>
     </section>
 
@@ -138,6 +132,11 @@
     <section class="contacts-types">
         <p data-aos="fade-right" class="telephone">ТЕЛЕФОН</p>
         <p data-aos="fade-left" class="mail">ПОЧТА</p>
+    </section>
+
+    <section class="data">
+        <p data-aos="fade-right" class="tel-group">+7 *** ***-**-**</p>
+        <li data-aos="fade-left" class="mail-group">SEKL@mail.ru</li>
     </section>
 
     <div data-aos="flip-up" class="line"></div>
