--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <section class="data">
         <p data-aos="fade-right" class="tel-group">+7 *** ***-**-**</p>
         <li data-aos="fade-left" class="mail-group" id="mailGroup">SEKL@mail.ru</li>
-        <audio src="audio\Jamie_Christopherson_-_Rules_of_Nature_OST_Metal_Gear_Rising_Revengeance_73652795.mp3" autoplay></audio>
+        <audio src="audio\Jamie_Christopherson_-_Rules_of_Nature_OST_Metal_Gear_Rising_Revengeance_73652795.mp3" id="myAudio" autoplay></audio>
     </section>
 
     <div data-aos="flip-up" class="line"></div>
