--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
     <section class="data">
         <p data-aos="fade-right" class="tel-group" id="telGroup">+7 *** ***-**-**</p>
-        <audio src="audio\Metal_Gear_Rising_-_A_Stranger_I_Remain_61916463.mp3" id="myAudio2" autoplay></audio>
+        <audio src="audio\Metal_Gear_Rising_-_A_Stranger_I_Remain_61916463.mp3" id="myAudio2" ></audio>
         <li data-aos="fade-left" class="mail-group" id="mailGroup">SEKL@mail.ru</li>
-        <audio src="audio\Jamie_Christopherson_-_Rules_of_Nature_OST_Metal_Gear_Rising_Revengeance_73652795.mp3" id="myAudio1" autoplay></audio>
+        <audio src="audio\Jamie_Christopherson_-_Rules_of_Nature_OST_Metal_Gear_Rising_Revengeance_73652795.mp3" id="myAudio1"></audio>
     </section>
 
     <div data-aos="flip-up" class="line"></div>
