--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <div data-aos="fade-up" data-aos-duration="1000" class="services-e-commerce">
             <span data-aos="fade-up" data-aos-duration="1000" class="two">02</span>
-            <h10 data-aos="fade-up" data-aos-duration="1000" class="type-uslug">E-COMMERCE</h10>
+            <h10 data-aos="fade-up" data-aos-duration="1000" class="type-uslug" id="uslugi-e-commerce">E-COMMERCE</h10>
         </div>
         <div data-aos="fade-up" data-aos-duration="1000" class="services-mobile">
             <span data-aos="fade-up" data-aos-duration="1000" class="three">03</span>
