Вроде кнопку починил

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <!-- SEKL -->
 <section data-aos="fade-up" data-aos-duration="1000" class="About-team" id="AT">
     <h4 data-aos="fade-up" data-aos-duration="1000" class="SEKL">SEKL</h4>
-    <p class="text-about-SEKL">Мы молодая команда веб разработчиков, с радостью обсудим вашу идею проекта.</p>
+    <p class="text-about-SEKL">Мы молодая команда веб-разработчиков, с радостью обсудим вашу идею проекта.</p>
     <p class="SEKL-paragrah">Наш проект затронет такие области как: </p>
     <ul class="project-types">
         <li class="finance">finance</li>
