Добавил кнопку меню

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <nav class="navigation">
         <ul class="nav-list" id="navList">
             <img src="img/default.svg" alt="" class="logo">
+            <img src="img/menu_black_24dp.svg" alt="" class="menu-list">
         <li><a href="#AT">О НАС</a></li>
         <li><a href="#Project">ПРОЕКТЫ</a></li>
         <li><a href="#services">УСЛУГИ</a></li>
