--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
 <!-- SEKL -->
 <section data-aos="fade-up" data-aos-duration="1000" class="About-team" id="AT">
     <h4 data-aos="fade-up" data-aos-duration="1000" class="SEKL">SEKL</h4>
-    <p class="text-about-SEKL">Мы молодая команда веб-разработчиков, с радостью обсудим вашу идею проекта.</p>
+    <p class="text-about-SEKL">Мы молодая команда веб-разработчиков, с радостью обсудим вашу идею проекта. На данный момент она состоит из 4 человек: </p>
+    <ul class="names">
+        <li class="S">Сердюкова Александра</li>
+        <li class="E">Нежурина Таисия</li>
+        <li class="K">Мухин Дмитрий</li>
+        <li class="L">Челядинов Дмитрий</li>
+    </ul>
     <p class="SEKL-paragrah">Наш проект затронет такие области как: </p>
     <ul class="project-types">
         <li class="finance">finance</li>
