--- a/index.html
+++ b/index.html
@@ -156,7 +156,37 @@
 
 <div class="statement">
 
-    <p data-aos="fade-up" data-aos-duration="1000" class="statement-text">
+<div class="text-zayavka">
+    <div class="text-zayavka1">
+        <p>Привет, меня зовут</p>
+        <input class="name-and-family" placeholder="имя и фамилия"></textarea>
+        <p>. Я из компании</p>
+    </div>
+    <div class="text-zayavka2">
+        <input class="name-company" placeholder="название компании"></textarea>
+        <p>. Вы можете связаться со мной по телефону</p>
+    </div>
+    <div class="text-zayavka3">
+        <input class="tel-company" placeholder="ххх ххх хх хх"></textarea>
+        <p>, или по электронной почте</p>
+        <input class="email-company" placeholder="your@email.ru"></textarea>
+        <p>.</p>
+    </div> 
+    <div class="text-zayavka4">
+        Меня интересует</p>
+        <input class="project-descriptions" placeholder="краткое описание проекта"></textarea>
+    </div>
+</div>
+
+    <div class="attach-file">
+        <a class="ssilka-attach-file" id="ssilkaAttach">Прикрепить файл</a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-paperclip" id="paperclip" viewBox="0 0 16 16">
+            <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"/>
+        </svg>
+    </div>
+
+    <button class="send-btn">Отправить</button>
+    <!-- <p data-aos="fade-up" data-aos-duration="1000" class="statement-text">
         Привет, меня зовут_____
         имя и фамилия
          . Я из компании_________
@@ -168,7 +198,7 @@
          .
         Меня интересует_______ 
     </p>
-    <button data-aos="fade-up" data-aos-duration="1000" class="btn-statement">Отправить</button>
+    <button data-aos="fade-up" data-aos-duration="1000" class="btn-statement">Отправить</button> -->
 </div>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
