--- a/index.html
+++ b/index.html
@@ -178,27 +178,14 @@
     </div>
 </div>
 
-    <div class="attach-file">
-        <a class="ssilka-attach-file" id="ssilkaAttach">Прикрепить файл</a>
+    <div class="attach-file-down">
+        <a class="text-attach-file" id="ssilkaAttach">Прикрепить файл</a>
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-paperclip" id="paperclip" viewBox="0 0 16 16">
             <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"/>
         </svg>
     </div>
 
-    <button class="send-btn">Отправить</button>
-    <!-- <p data-aos="fade-up" data-aos-duration="1000" class="statement-text">
-        Привет, меня зовут_____
-        имя и фамилия
-         . Я из компании_________
-        название компании
-         . Вы можете связаться со мной по телефону
-        ххх ххх хх хх
-         , или по электронной почте 
-        your@email.ru
-         .
-        Меня интересует_______ 
-    </p>
-    <button data-aos="fade-up" data-aos-duration="1000" class="btn-statement">Отправить</button> -->
+    <button class="send-btn-down">отправить</button>
 </div>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
